--- a/final_UI_dev/src/main/resources/application.properties
+++ b/final_UI_dev/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-#spring.security.user.name= pranam
-#spring.security.user.password= pranam
+#spring.security.user.name= varun
+#spring.security.user.password= varun
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/ecommerce
+spring.datasource.url = jdbc:mysql://localhost:3306/loginscreen
 spring.datasource.username = root
-spring.datasource.password = 4nm19is115
+spring.datasource.password = root
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
@@ -16,8 +16,7 @@ spring.jpa.show-sql = true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username= 4nm19is115@nmamit.in
-spring.mail.password=
-
+spring.mail.username=4nm19ec192@nmamit.in
+spring.mail.password =
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
