--- a/final_UI_dev/pom.xml
+++ b/final_UI_dev/pom.xml
@@ -37,7 +37,11 @@
 
 		</dependency>
 
-
+		<dependency>
+			<groupId>net.bytebuddy</groupId>
+			<artifactId>byte-buddy</artifactId>
+			<version>1.11.22</version>
+		</dependency>
 		<dependency>
 
 			<groupId>io.jsonwebtoken</groupId>
