--- a/final_UI_dev/src/main/resources/application.properties
+++ b/final_UI_dev/src/main/resources/application.properties
@@ -14,10 +14,16 @@ spring.jpa.generate-ddl = true
 spring.jpa.show-sql = true
 
 
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username= 4nm19is115@nmamit.in
+#spring.mail.password=prnm@nmamit23
+#spring.mail.auth=true
+
+# Mail Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username= 4nm19is115@nmamit.in
-spring.mail.password=
-
+spring.mail.username=4nm19is115@nmamit.in
+spring.mail.password=prnm@nmamit23
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
