--- a/final_UI_dev/src/main/resources/application.properties
+++ b/final_UI_dev/src/main/resources/application.properties
@@ -17,13 +17,13 @@ spring.jpa.show-sql = true
 #spring.mail.host=smtp.gmail.com
 #spring.mail.port=587
 #spring.mail.username= 4nm19is115@nmamit.in
-#spring.mail.password=prnm@nmamit23
+#spring.mail.password=prnm@info
 #spring.mail.auth=true
 
 # Mail Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=4nm19is115@nmamit.in
-spring.mail.password=prnm@nmamit23
+spring.mail.password=prnm@info
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
