--- a/final_UI_dev/pom.xml
+++ b/final_UI_dev/pom.xml
@@ -43,6 +43,10 @@
 			<version>1.11.22</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+		</dependency>
+		<dependency>
 
 			<groupId>io.jsonwebtoken</groupId>
 
